--- a/luis.madrid.inmagina/build.gradle
+++ b/luis.madrid.inmagina/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
-
+	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+	compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+	
     
 }
